@@ -1,0 +1,5 @@
+# -*- coding: utf-8 -*-
+
+
+class FailingTask(Exception):
+    pass
